changed html Template

--- a/src/main/resources/templates/SampleEmailTemplate.html
+++ b/src/main/resources/templates/SampleEmailTemplate.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div>
-<div style ="text: center">
+<div>
   <div>Name : ${name}</div>
   <div class="color:orange">Email : ${email}</div>
 </div>
-  <table border="1px solid black" width="100%"
+  <table border="1px solid black" width = "560"
          style="font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif; border-collapse: collapse;">
       <tr>
           <th>
